<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.Error"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2.3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tFailed"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/titles"
                android:textColor="@color/color_text_info" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tryAgain"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/color_text_info"
                android:textSize="@dimen/subtitle"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculation"
                android:id="@+id/calculationError"
                android:textColor="@color/color_text_info"
                android:textSize="@dimen/calculation"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:id="@+id/scoreError"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/color_text_info"
                android:textSize="@dimen/score"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2.5" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.5">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="15"></RelativeLayout>

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/bContinue"
                        android:id="@+id/continuation"
                        android:layout_weight="1"
                        android:background="@drawable/theme_buttons_white_and_gray"
                        android:textSize="@dimen/buttons"
                        android:textColor="@color/color_text_buttons"
                        android:onClick="eventError" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="15" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.7"></RelativeLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.8"></RelativeLayout>

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/bListGames"
                        android:id="@+id/categorias"
                        android:layout_weight="1"
                        android:background="@drawable/theme_buttons_white_and_gray"
                        android:textSize="@dimen/s_buttons"
                        android:textColor="@color/color_text_buttons"
                        android:onClick="eventError" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.8" />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/bSaveScore"
                        android:id="@+id/saveScore"
                        android:layout_weight="1"
                        android:background="@drawable/theme_buttons_white_and_gray"
                        android:textSize="@dimen/s_buttons"
                        android:textColor="@color/color_text_buttons"
                        android:onClick="eventError" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.8" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2.3" >

    </LinearLayout>

</LinearLayout>